# OpticalTransmittanceBasedRouting

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LoadGeoData.py  Makefile  TestCities.txt  Utility.cpp  Utility.h  cmake_install.cmake  csvTolatex.py  genCityLoc.py  main.cpp  runThis.sh  visEbits.py  viseEbitData.py  visualizeDATA.py
Algo/: Constants.h  OpticalTransmittanceOptimizer.cpp  OpticalTransmittanceOptimizer.h  Path.cpp  Path.h  ProxyEdge.cpp  ProxyEdge.h
Outputs/: BerlinCopenhagen.txt  BerlinHelsinki.txt  BerlinParis.txt  BerlinRome.txt  BerlinVienna.txt  BudapestBerlin.txt  BudapestCopenhagen.txt  BudapestHelsinki.txt  BudapestParis.txt  BudapestRome.txt  BudapestVienna.txt  CopenhagenBerlin.txt  CopenhagenHelsinki.txt  CopenhagenParis.txt  CopenhagenRome.txt  CopenhagenVienna.txt  HelsinkiBerlin.txt  HelsinkiBudapest.txt  HelsinkiCopenhagen.txt  HelsinkiParis.txt  HelsinkiRome.txt  HelsinkiVienna.txt  ParisBerlin.txt  ParisHelsinki.txt  ParisRome.txt  RomeBerlin.txt  RomeBudapest.txt  RomeCopenhagen.txt  RomeHelsinki.txt  RomeParis.txt  RomeVienna.txt  ViennaBerlin.txt  ViennaBudapest.txt  ViennaCopenhagen.txt  ViennaHelsinki.txt  ViennaParis.txt  ViennaRome.txt
Outputs/Data/: BerlinBudapest.txt  BerlinCopenhagen.txt  BerlinHelsinki.txt  BerlinParis.txt  BerlinRome.txt  (+37 more)
SatData/: Edge.cpp  Edge.h  Network.cpp  Network.h  SatelliteNode.cpp  SatelliteNode.h
cmakeLoc/: ..\Outputs\QSAT_CROS_LOWMID1.txt\genData\Copenhagen.txt  ..\Outputs\QSAT_CROS_LOWMID1.txt\genData\Rome.txt  OpticalTransmittanceBasedRouting  nohup.out
loadSats/: LoadSat.cpp  LoadSat.h
(+8037 files in other folders)
